feat: message forwarding

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ serenity = { version = "0.12.4", default-features = false }
 bitmask-enum = "2.2.5"
 tower-http = { version = "0.6.2", features = ["cors", "trace"] }
 chrono = { version = "0.4.39", features = ["serde"] }
+socketioxide = { version = "0.16.0", features = ["extensions", "state", "tracing"] }
